# formalytx

./: .gitignore  README.md
client/: env.d.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
client/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
client/app/privacy/: page.tsx
client/app/telemetry/: page.tsx
client/components/: Footer.tsx  Nav.tsx  visually-hidden-input.tsx
client/components/chart/: Chart.tsx  ChartSettingsPanel.tsx
client/components/telemetry/: LapChart.tsx  LapTable.tsx  SessionSidebar.tsx  SessionViewer.tsx  TelemetrySettingsPanel.tsx  TelemetryTabs.tsx  TelemetryViewer.tsx  TireBadge.tsx  TyreBadge.tsx
client/components/ui/: ColorSwatch.tsx  SVGLogo.tsx  card.tsx  color-picker.tsx  command.tsx  dialog.tsx  (+10 more)
client/hooks/: use-as-ref.ts
client/lib/: api.ts  buildSeries.ts  buildTooltipFormatter.ts  chartStructure.ts  colors.ts  compounds.ts  constants.ts  delta.ts  format.ts  interp.ts  selectedLaps.ts  seriesKey.ts  toasts.ts  types.ts  utils.ts
client/public/: lap-table-alternatives.html
server/: .dockerignore  Dockerfile  compose.override.yaml  compose.yaml  docker-entrypoint.sh  pyproject.toml
server/app/: caching.py  config.py  fastf1_loader.py  main.py  utils.py
server/app/schedule/: routes.py  schemas.py  services.py
server/app/sessions/: routes.py  schemas.py  services.py
server/nginx/: Dockerfile  nginx.conf
server/tests/: test_caching.py  test_fastf1_loader.py  test_schedule_services.py  test_sessions_services.py  test_utils.py
(+13 files in other folders)
