[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "fastf1>=3.8.2",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
